# Openenv-Hack-finale

./: LICENSE  README.md
docs/: themes_extracted.txt
polyglot_optima/: .dockerignore  Dockerfile  README.md  client.py  models.py  openenv.yaml  pyproject.toml
polyglot_optima/server/: __init__.py  app.py  environment.py
polyglot_optima/server/rewards/: __init__.py  correctness_rubric.py  diagnosis_rubric.py  portability_rubric.py  rubrics.py  self_correction_rubric.py  speedup_rubric.py
polyglot_optima/server/scenarios/: __init__.py  adaptive_curriculum.py  dataset_loader.py  generator.py  hardware_profiles.py  trap_library.py
polyglot_optima/server/tools/: __init__.py  _runtime.py  bottleneck_reporter.py  cpp_compiler.py  hardware_profiler.py  portability_checker.py  python_analyzer.py  submit.py  verifier.py
polyglot_optima/tests/: smoke_llm_hf.py  test_rewards.py  test_runtime_dispatch.py  test_scenarios.py  test_skeleton.py  test_smoke_gate.py  test_smoke_gate_deep.py  test_tools.py
polyglot_optima/training/: hf_partial_train.py  hf_run_notebook_partial.py  openenv_hackathon_training.ipynb  openenv_hackathon_training_colab.ipynb
